cmake_minimum_required(VERSION 3.22)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp src/main.cpp include/leetcode/144/Solution.h include/leetcode/105/Solution.h include/leetcode/20/Solution.h include/leetcode/232/MyQueue.h include/leetcode/94/Solution.h include/leetcode/145/Solution.h include/leetcode/206/Solution.h include/leetcode/703/KthLargest.h include/util/Heap.h include/leetcode/1572/Solution.h include/leetcode/1572/Solution.h)
